--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
 	<packaging>war</packaging>
 
 	<name>curso-jsg-e-primefaces</name>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties> 
+	</properties>
 
 
 	<dependencies>
@@ -41,8 +41,14 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>5.2.3.Final</version>
+			<version>5.6.5.Final</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.27.0-GA</version>
 		</dependency>
 
 		<dependency>
@@ -59,11 +65,17 @@
 			<scope>compile</scope>
 		</dependency>
 
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>6.0.4</version>
-			<scope>compile</scope>
+			<version>8.0.14</version>
 		</dependency>
 
 
