--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
 	version="3.1">
 
 	<display-name>curso-jsg-e-primefaces</display-name>
+	
+	<welcome-file-list>
+		<welcome-file>GestaoEmpresas.xhtml</welcome-file>
+	</welcome-file-list>
 
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
